@@ -51,6 +51,7 @@ Change log 1.3 (under development)
 * @PowerMockIgnore now accept wildcards, this means that if you want to ignore all classes in the "com.mypackage" package you now have to specify @PowerMockIgnore("org.mypackage.*") (before you did @PowerMockIgnore("org.mypackage.")).
 * @PrepareForTest now accepts wildcards in the fullyQualifiedName attribute, e.g. you can now do @PrepareForTest(fullyQualifiedName={"*name*"}) to prepare all classes in containing "name" in its fully-qualified name.
 * Fixed a major issue with the prepare for test algorithm. Before classes were accidentally prepared for test automatically if the fully qualified name of the class started with the same fully qualified name as a class that were prepared for test. This has now been resolved. This may lead to backward incompatibility issues in cases where tests didn't prepare all necessary artifacts for test.
+* Mockito extension API now supports verification of private methods (for both static and instance methods). Use verifyPrivate(..).method(..), e.g. verifyPrivate(myObject, times(2)).method("myMethod", argument1, argument2).
 
 Change log 1.2.5 (released 2009-05-05)
 --------------------------------------
